# libclover

./: .gitignore  CMakeLists.txt  README.md  cmake-vs2017.bat  cmake-xcode.sh
include/: clover_sscanf.h
snipets/: a_task.c
src/: clover_sscanf.c
test/: CMakeLists.txt  main.c
